--- a/index.html
+++ b/index.html
@@ -31,18 +31,19 @@
             }
         });
 })('5b78922f-21c6-4607-6a35-2dbe203c2c7b');
-</script>
+</script>	
 </head>
 
 <h1> Test site</h1>
 
 <h2>HTML Buttons</h2>
 <p>HTML buttons are defined with the button tag:</p>
-
+:
 <button>Click me 1</button>
-<button>Click me 2</button>
+<button onclick="window.location.href = 'https://omerwexler86.github.io/test1/';">Click me 2</button>
 <button>Click me 3</button>
 <button>Click me 4</button>
 <button>Click me 5</button>
+
 
 
