--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <p>HTML buttons are defined with the button tag:</p>
 :
 <button>Click me 1</button>
-<button onclick="window.location.href = 'https://omerwexler86.github.io/test1/';">Click me 2</button>
+<a href = 'https://omerwexler86.github.io/test1/'>Click me 2</button>
 <button>Click me 3</button>
 <button>Click me 4</button>
 <button>Click me 5</button>
