--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         pendo.initialize({
             visitor: {
                 id:              'VISITOR-UNIQUE-ID'   // Required if user is logged in
-                // email:        // Optional
-                // role:         // Optional
+                email:        'omer@pendo.io'
+                 role:         'admin'
 
                 // You can add any additional visitor level key-values here,
                 // as long as it's not one of the above reserved names.
@@ -21,8 +21,8 @@
 
             account: {
                 id:           'ACCOUNT-UNIQUE-ID' // Highly recommended
-                // name:         // Optional
-                // planLevel:    // Optional
+                name:         'pendo'
+                planLevel:    'Enterprise'
                 // planPrice:    // Optional
                 // creationDate: // Optional
 
