--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         pendo.initialize({
             visitor: {
                 id:              'VISITOR-UNIQUE-ID'   // Required if user is logged in
-                email:        'omer@pendo.io'
-                 role:         'admin'
+                // email:        // Optional
+                // role:         // Optional
 
                 // You can add any additional visitor level key-values here,
                 // as long as it's not one of the above reserved names.
@@ -21,8 +21,8 @@
 
             account: {
                 id:           'ACCOUNT-UNIQUE-ID' // Highly recommended
-                name:         'pendo'
-                planLevel:    'Enterprise'
+                // name:         // Optional
+                // planLevel:    // Optional
                 // planPrice:    // Optional
                 // creationDate: // Optional
 
@@ -31,7 +31,7 @@
             }
         });
 })('5b78922f-21c6-4607-6a35-2dbe203c2c7b');
-</script>	
+</script>
 </head>
 
 <h1> Test site</h1>
