--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         // Please use Strings, Numbers, or Bools for value types.
         pendo.initialize({
             visitor: {
-                id:              'VISITOR-UNIQUE-ID'   // Required if user is logged in
+                id:              'omer'   // Required if user is logged in
                 // email:        // Optional
                 // role:         // Optional
 
