--- a/index.html
+++ b/index.html
@@ -38,9 +38,8 @@
 
 <h2>HTML Buttons</h2>
 <p>HTML buttons are defined with the button tag:</p>
-:
 <button>Click me 1</button>
-<a href = 'https://omerwexler86.github.io/test1/'>Click me 2</a>
+<button>Click me 2</button>
 <button>Click me 3</button>
 <button>Click me 4</button>
 <button>Click me 5</button>
