--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <h2>HTML Buttons</h2>
 <p>HTML buttons are defined with the button tag:</p>
 <button>Click me 1</button>
-<button>Click me 2</button>
+<a href = 'https://omerwexler86.github.io/pendo/README'>Click me 2</a>
 <button>Click me 3</button>
 <button>Click me 4</button>
 <button>Click me 5</button>
