--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         pendo.initialize({
             visitor: {
                 id:              'omer'   // Required if user is logged in
+                sex:              'male'
                 // email:        // Optional
                 // role:         // Optional
 
