--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         // Please use Strings, Numbers, or Bools for value types.
         pendo.initialize({
             visitor: {
-                id:              'keren'   // Required if user is logged in
+                id:              'keren',   // Required if user is logged in
                 sex:              'female'
                 // email:        // Optional
                 // role:         // Optional
