--- a/index.html
+++ b/index.html
@@ -44,6 +44,18 @@
 <button>Click me 3</button>
 <button>Click me 4</button>
 <button>Click me 5</button>
-
+<script type="text/javascript">
+POST /api/v1/create HTTP/1.1
+Host: dummy.restapiexample.com
+Content-Type: application/json
+cache-control: no-cache
+Postman-Token: 1bd10819-984e-4548-ac84-cc5c147b5fd6
+{
+    "name": "testoemrwex2",
+    "salary": "123",
+    "age": "23",
+    "id": "719"
+}------WebKitFormBoundary7MA4YWxkTrZu0gW--
+</script>
 
 
