--- a/index.html
+++ b/index.html
@@ -1,4 +1,23 @@
 <head>
+
+
+<script>
+function test(){
+POST /api/v1/create HTTP/1.1
+Host: dummy.restapiexample.com
+Content-Type: application/json
+cache-control: no-cache
+Postman-Token: 1bd10819-984e-4548-ac84-cc5c147b5fd6
+{
+    "name": "testoemrwex2",
+    "salary": "123",
+    "age": "23",
+    "id": "719"
+}------WebKitFormBoundary7MA4YWxkTrZu0gW--
+}
+</script>
+
+
 <script>
 (function(apiKey){
     (function(p,e,n,d,o){var v,w,x,y,z;o=p[d]=p[d]||{};o._q=[];
@@ -33,6 +52,10 @@
         });
 })('5b78922f-21c6-4607-6a35-2dbe203c2c7b');
 </script>
+
+
+test();
+
 </head>
 
 <h1> Test site</h1>
@@ -44,18 +67,7 @@
 <button>Click me 3</button>
 <button>Click me 4</button>
 <button>Click me 5</button>
-<script type="text/javascript">
-POST /api/v1/create HTTP/1.1
-Host: dummy.restapiexample.com
-Content-Type: application/json
-cache-control: no-cache
-Postman-Token: 1bd10819-984e-4548-ac84-cc5c147b5fd6
-{
-    "name": "testoemrwex2",
-    "salary": "123",
-    "age": "23",
-    "id": "719"
-}------WebKitFormBoundary7MA4YWxkTrZu0gW--
-</script>
+
+
 
 
