--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@ Content-Type: application/json
 cache-control: no-cache
 Postman-Token: 1bd10819-984e-4548-ac84-cc5c147b5fd6
 {
-    "name": "testomerwex3",
-    "salary": "123",
-    "age": "23",
-    "id": "71999"
+    name: "testomerwex3",
+    salary: "123",
+    age: "23",
+    id: "71999"
 }------WebKitFormBoundary7MA4YWxkTrZu0gW--
 }
 </script>
