--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
       crossorigin="anonymous"></script>
 
 <script>
+function createUser() {
+
 var settings = {
   "async": true,
   "crossDomain": true,
@@ -19,8 +21,11 @@ var settings = {
 $.ajax(settings).done(function (response) {
   console.log(response);
 });
+
+}
 </script>
 
+createUser();
 
 <script>
 (function(apiKey){
