--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ createUser();
         // Please use Strings, Numbers, or Bools for value types.
         pendo.initialize({
             visitor: {
-                id:              'keren',   // Required if user is logged in
+                id:              'VISITOR-UNIQUE-ID'   // Required if user is logged in
                 sex:              'female'
                 // email:        // Optional
                 // role:         // Optional
