--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@ createUser();
         // Please use Strings, Numbers, or Bools for value types.
         pendo.initialize({
             visitor: {
-                id:              'VISITOR-UNIQUE-ID',   // Required if user is logged in
-                sex:              'female'
+                id:              'VISITOR-UNIQUE-ID'   // Required if user is logged in
                 // email:        // Optional
                 // role:         // Optional
 
