--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@ test();
 <p>HTML buttons are defined with the button tag:</p>
 <button>Click me 1</button>
 <a href = 'https://omerwexler86.github.io/pendo/README'>Click me 2</a>
+ <button onclick="window.location.href = 'https://omerwexler86.github.io/pendo/README';">Click Here</button>
+
 <button>Click me 3</button>
 <button>Click me 4</button>
 <button>Click me 5</button>
