--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 createUser();
 
-<script>
+<!--<script>
 (function(apiKey){
     (function(p,e,n,d,o){var v,w,x,y,z;o=p[d]=p[d]||{};o._q=[];
     v=['initialize','identify','updateOptions','pageLoad'];for(w=0,x=v.length;w<x;++w)(function(m){
@@ -46,7 +46,7 @@ createUser();
         });
 })('5b78922f-21c6-4607-6a35-2dbe203c2c7b');
 </script>
-
+-->
 
 test();
 
