--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
   analytics.load("xKAOezkeNz2HNpftltJnarzIvNvJqkwh");
   analytics.page();
   }}();
+  analytics.identify("97980cfea0067", {
+  name: "Peter Gibbons", 
+  email: "peter@initech.com", 
+  plan: "premium", 
+  logins: 5
+});
 </script>
 
 createUser();
