--- a/index.html
+++ b/index.html
@@ -9,12 +9,8 @@
   analytics.load("xKAOezkeNz2HNpftltJnarzIvNvJqkwh");
   analytics.page();
   }}();
-  analytics.identify("97980cfea0067", {
-  name: "Peter Gibbons", 
-  email: "peter@initech.com", 
-  plan: "premium", 
-  logins: 5
-});
+
+
 </script>
 
 createUser();
@@ -54,7 +50,6 @@ createUser();
 </script>
 -->
 
-test();
 
 </head>
 
@@ -70,6 +65,15 @@ test();
 <button>Click me 4</button>
 <button>Click me 5</button>
 
+<script>
+  
+  analytics.identify("97980cfea0067", {
+  name: "Peter Gibbons", 
+  email: "peter@initech.com", 
+  plan: "premium", 
+  logins: 5
+});
 
+</script>
 
 
