--- a/index.html
+++ b/index.html
@@ -74,6 +74,17 @@ createUser();
   logins: 5
 });
 
+  analytics.group("0e8c78ea9d97a7b8185e8632", {
+  name: "Initech", 
+  industry: "Technology",
+  employees: 329, 
+  plan: "enterprise", 
+  "total billed": 830
+});
+analytics.track("Registered", {
+  plan: "Pro Annual", 
+  accountType: "Facebook"
+});
 </script>
 
 
