--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
                 // You can add any additional account level key-values here,
                 // as long as it's not one of the above reserved names.
             }
+            pendo.track("Registered", {
+  plan: "Pro Annual",
+  accountType: "Facebook"
+});
         });
 })('5b78922f-21c6-4607-6a35-2dbe203c2c7b');
 </script>
