--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 // You can add any additional account level key-values here,
                 // as long as it's not one of the above reserved names.
             }
-            pendo.track("Registered", {
+            pendo.track("Registered2", {
   plan: "Pro Annual",
   accountType: "Facebook"
 });
