--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         // Please use Strings, Numbers, or Bools for value types.
         pendo.initialize({
             visitor: {
-                id:              'VISITOR-UNIQUE-ID'   // Required if user is logged in
+                id:              'VISITOR-UNIQUE-ID'
+                rule: 'Technical success'   // Required if user is logged in
                 // email:        // Optional
                 // role:         // Optional
 
