--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         // Please use Strings, Numbers, or Bools for value types.
         pendo.initialize({
             visitor: {
-                id:              'omerWex',
-                role: "Technical success"   // Required if user is logged in
+                id:              'omerWex'
+                   // Required if user is logged in
                 // email:        // Optional
                 // role:         // Optional
 
