--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
         // Please use Strings, Numbers, or Bools for value types.
         pendo.initialize({
             visitor: {
-                id:              'omerWex'
+                id:              'omerWex',
+                town:             "Kibutz Kinereth" 
+
                    // Required if user is logged in
                 // email:        // Optional
                 // role:         // Optional
