--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
 <button>Click me 5</button>
 <br><br><br>
 <select>
-  <option value="volvo">Volvo</option>
-  <option value="saab">Saab</option>
-  <option value="mercedes">Mercedes</option>
-  <option value="audi">Audi</option>
+  <option id='o1' value="volvo">Volvo</option>
+  <option id='o2' value="saab">Saab</option>
+  <option id='o3' value="mercedes">Mercedes</option>
+  <option id='o4' value="audi">Audi</option>
 </select>
 <script>
   
