--- a/index.html
+++ b/index.html
@@ -59,56 +59,21 @@
 <button>Click me 3</button>
 <button>Click me 4</button>
 <button>Click me 5</button>
-<br><br><br>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 <select>
   <option id='o1' value="volvo">Volvo</option>
   <option id='o2' value="saab">Saab</option>
   <option id='o3' value="mercedes">Mercedes</option>
   <option id='o4' value="audi">Audi</option>
+  <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+  <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+  <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+  <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+  <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+  <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+  <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+  <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+  xxxxxxxxx
 </select>
-<script>
-  
-  analytics.identify("97980cfea0067", {
-  name: "Peter Gibbons", 
-  email: "peter@initech.com", 
-  plan: "premium", 
-  logins: 5
-});
 
-  analytics.group("0e8c78ea9d97a7b8185e8632", {
-  name: "Initech", 
-  industry: "Technology",
-  employees: 329, 
-  plan: "enterprise", 
-  "total billed": 830
-});
-analytics.track("Registered", {
-  plan: "Pro Annual", 
-  accountType: "Facebook"
-});
-</script>
-<div id="mySidenav" class="sidenav">
-  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-  <a href="#">About</a>
-  <a href="#">Services</a>
-  <a href="#">Clients</a>
-  <a href="#">Contact</a>
-</div>
 
-<!-- Use any element to open the sidenav -->
-<span onclick="openNav()">open</span>
-
-<!-- Add all page content inside this div if you want the side nav to push page content to the right (not used if you only want the sidenav to sit on top of the page -->
-
-<script>
-/* Set the width of the side navigation to 250px */
-function openNav() {
-  document.getElementById("mySidenav").style.width = "250px";
-}
-
-/* Set the width of the side navigation to 0 */
-function closeNav() {
-  document.getElementById("mySidenav").style.width = "0";
-}
-
-</script>
