--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
   <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
   <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
   <p>This is a text for testing the scroll bar</p>
+  button>Click me 6</button>
 </select>
 
 
