--- a/index.html
+++ b/index.html
@@ -43,7 +43,19 @@
   plan: "Pro Annual",
   accountType: "Facebook"});
 </script>
+<script type="text/javascript">
 
+function saab(){
+pendo.track("saab", {
+  PROPERTY1: "PROPERTY1VALUE",
+  PROPERTY2: "PROPERTY2VALUE",
+  PROPERTYN: "PROPERTYNVALUE"
+  
+});
+
+}
+
+</script>
 
 
 </head>
@@ -61,7 +73,7 @@
 <button>Click me 5</button>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 <select>
-  <option id='o1' value="volvo">Volvo</option>
+  <option id='o1' value="volvo" onchange="saab()">Volvo</option>
   <option id='o2' value="saab">Saab</option>
   <option id='o3' value="mercedes">Mercedes</option>
   <option id='o4' value="audi">Audi</option>
