--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@ pendo.track("saab", {
 <button>Click me 4</button>
 <button>Click me 5</button>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-<select>
-  <option id='o1' value="volvo" onchange="saab()">Volvo</option>
-  <option id='o2' value="saab">Saab</option>
+<select onchange="saab()">
+  <option id='o1' value="volvo">Volvo</option>
+  <option id='o2' value="saab" onchange="saab()">Saab</option>
   <option id='o3' value="mercedes">Mercedes</option>
   <option id='o4' value="audi">Audi</option>
 </select>
