--- a/index.html
+++ b/index.html
@@ -38,21 +38,17 @@
 });
        
 })('5b78922f-21c6-4607-6a35-2dbe203c2c7b');
-
- pendo.track("Registered2", {
-  plan: "Pro Annual",
-  accountType: "Facebook"});
 </script>
 <script type="text/javascript">
 
 function saab(){
-pendo.track("saab", {
-  PROPERTY1: "PROPERTY1VALUE",
-  PROPERTY2: "PROPERTY2VALUE",
-  PROPERTYN: "PROPERTYNVALUE"
-  
-});
-
+  console.log("Inside saab");
+  pendo.track("saab", {
+    PROPERTY1: "PROPERTY1VALUE",
+    PROPERTY2: "PROPERTY2VALUE",
+    PROPERTYN: "PROPERTYNVALUE"
+    
+  });
 }
 
 </script>
@@ -72,7 +68,7 @@ pendo.track("saab", {
 <button>Click me 4</button>
 <button>Click me 5</button>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-<select onchange="saab()">
+<select>
   <option id='o1' value="volvo">Volvo</option>
   <option id='o2' value="saab" onchange="saab()">Saab</option>
   <option id='o3' value="mercedes">Mercedes</option>
