--- a/index.html
+++ b/index.html
@@ -43,12 +43,7 @@
 
 function saab(){
   console.log("Inside saab");
-  pendo.track("saab", {
-    PROPERTY1: "PROPERTY1VALUE",
-    PROPERTY2: "PROPERTY2VALUE",
-    PROPERTYN: "PROPERTYNVALUE"
-    
-  });
+  pendo.track("saab");
 }
 
 </script>
