--- a/index.html
+++ b/index.html
@@ -43,7 +43,12 @@
 
 function saab(){
   console.log("Inside saab");
-  pendo.track("saab", { });
+  pendo.track("saab", {
+    PROPERTY1: "PROPERTY1VALUE",
+    PROPERTY2: "PROPERTY2VALUE",
+    PROPERTYN: "PROPERTYNVALUE"
+    
+  });
 }
 
 </script>
