--- a/index.html
+++ b/index.html
@@ -47,10 +47,9 @@ function saab(){
     PROPERTY1: "PROPERTY1VALUE",
     PROPERTY2: "PROPERTY2VALUE",
     PROPERTYN: "PROPERTYNVALUE"
-    
   });
+  console.log("After track");
 }
-
 </script>
 
 
