--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@ function saab(){
 <button>Click me 4</button>
 <button>Click me 5</button>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-<select>
+<select onchange="saab()">
   <option id='o1' value="volvo">Volvo</option>
-  <option id='o2' value="saab" onchange="saab()">Saab</option>
+  <option id='o2' value="saab">Saab</option>
   <option id='o3' value="mercedes">Mercedes</option>
   <option id='o4' value="audi">Audi</option>
 </select>
