--- a/index.html
+++ b/index.html
@@ -41,8 +41,9 @@
 </script>
 <script type="text/javascript">
 
-function saab(){
-  console.log("Inside saab");
+function saab(selectObject){
+  var value = selectObject.value;  
+  console.log(value;
   pendo.track("saab", {
     PROPERTY1: "PROPERTY1VALUE",
     PROPERTY2: "PROPERTY2VALUE",
@@ -67,7 +68,7 @@ function saab(){
 <button>Click me 4</button>
 <button>Click me 5</button>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-<select onchange="saab()">
+<select onchange="saab(this)">
   <option id='o1' value="volvo">Volvo</option>
   <option id='o2' value="saab">Saab</option>
   <option id='o3' value="mercedes">Mercedes</option>
