--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 function saab(selectObject){
   var value = selectObject.value;  
-  console.log(value;
+  console.log(value);
   pendo.track("saab", {
     PROPERTY1: "PROPERTY1VALUE",
     PROPERTY2: "PROPERTY2VALUE",
