--- a/index.html
+++ b/index.html
@@ -44,12 +44,7 @@
 function saab(selectObject){
   var value = selectObject.value;  
   console.log(value);
-  pendo.track("saab", {
-    PROPERTY1: "PROPERTY1VALUE",
-    PROPERTY2: "PROPERTY2VALUE",
-    PROPERTYN: "PROPERTYNVALUE"
-  });
-  console.log("After track");
+  pendo.track(value, null);
 }
 </script>
 
@@ -70,7 +65,7 @@ function saab(selectObject){
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 <select onchange="saab(this)">
   <option id='o1' value="volvo">Volvo</option>
-  <option id='o2' value="saab">Saab</option>
+  <option id='o2' value="saab" pendo.track('s')>Saab</option>
   <option id='o3' value="mercedes">Mercedes</option>
   <option id='o4' value="audi">Audi</option>
 </select>
