--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
         // Please use Strings, Numbers, or Bools for value types.
         pendo.initialize({
             visitor: {
-                id:              'test',
-                town:             "Kibutz Kinereth" 
+                id:              '1243223',
+                town:             "Rishon LeZion", 
 
                    // Required if user is logged in
-                // email:        // Optional
-                // role:         // Optional
-
+                 email:        'gaia@gaia.com',
+                name:         'Gaia',
+                Last name:    'Wexler'
                 // You can add any additional visitor level key-values here,
                 // as long as it's not one of the above reserved names.
             },
