--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 
                    // Required if user is logged in
                  email:        'gaia@gaia.com',
-                name:         'Gaia',
-                Last name:    'Wexler'
+                firstName:         'Gaia',
+                lastName:    'Wexler'
                 // You can add any additional visitor level key-values here,
                 // as long as it's not one of the above reserved names.
             },
