--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@ function saab(selectObject){
 <button>Click me 4</button>
 <button>Click me 5</button>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-<select onchange="saab(this)">
+<select >
   <option id='o1' value="volvo">Volvo</option>
-  <option id='o2' value="saab" onchange='pendo.track('Omer',null)'>Saab</option>
+  <option id='o2' value="saab" onselect='pendo.track('Omer',null)'>Saab</option>
   <option id='o3' value="mercedes">Mercedes</option>
   <option id='o4' value="audi">Audi</option>
 </select>
