--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ function saab(selectObject){
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 <select >
   <option id='o1' value="volvo">Volvo</option>
-  <option id='o2' value="saab" onselect='pendo.track('Omer',null)'>Saab</option>
+  <option id='o2' value="saab" onselect='pendo.track("Omer",null)'>Saab</option>
   <option id='o3' value="mercedes">Mercedes</option>
   <option id='o4' value="audi">Audi</option>
 </select>
