--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@ function saab(selectObject){
 <button>Click me 5</button>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 <select >
-  <option id='o1' value="volvo" onselect='pendo.track("Volvo",null)'>Volvo</option>
-  <option id='o2' value="saab" onselect='pendo.track("SAAB",null)'>Saab</option>
-  <option id='o3' value="mercedes" onselect='pendo.track("Mercedes",null)'>Mercedes</option>
-  <option id='o4' value="audi" onselect='pendo.track("Audi",null)'>Audi</option>
+  <option id='o1' value="volvo" onselect="pendo.track("Volvo",null)">Volvo</option>
+  <option id='o2' value="saab" onselect="pendo.track("SAAB",null)">Saab</option>
+  <option id='o3' value="mercedes" onselect="pendo.track("Mercedes",null)">Mercedes</option>
+  <option id='o4' value="audi" onselect="pendo.track("Audi",null)">Audi</option>
 </select>
   <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
   <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
