--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
                    // Required if user is logged in
                  email:        'gaia@gaia.com',
                 firstName:         'Gaia',
-                lastName:    'Wexler'
+                lastName:    'Wexler',
+                date: Date 
                 // You can add any additional visitor level key-values here,
                 // as long as it's not one of the above reserved names.
             },
@@ -63,11 +64,11 @@ function saab(selectObject){
 <button>Click me 4</button>
 <button>Click me 5</button>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-<select >
-  <option id='o1' value="volvo" onselect="pendo.track("Volvo",null)">Volvo</option>
-  <option id='o2' value="saab" onselect="pendo.track("SAAB",null)">Saab</option>
-  <option id='o3' value="mercedes" onselect="pendo.track("Mercedes",null)">Mercedes</option>
-  <option id='o4' value="audi" onselect="pendo.track("Audi",null)">Audi</option>
+<select onchange="saab(this)">
+  <option id='o1' value="volvo">Volvo</option>
+  <option id='o2' value="saab" onselect='pendo.track('Omer',null)'>Saab</option>
+  <option id='o3' value="mercedes">Mercedes</option>
+  <option id='o4' value="audi">Audi</option>
 </select>
   <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
   <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
