--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                  email:        'gaia@gaia.com',
                 firstName:         'Gaia',
                 lastName:    'Wexler',
-                date: Date 
+                date: Date() 
                 // You can add any additional visitor level key-values here,
                 // as long as it's not one of the above reserved names.
             },
