--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ function saab(selectObject){
 
 <h2>HTML Buttons</h2>
 <p>HTML buttons are defined with the button tag:</p>
-<button>Click me 1</button>
+<button id='clickMe1'>Click me 1</button>
 <a href = 'https://omerwexler86.github.io/pendo/README'>Click me 2</a>
 <button class="your-button-class" onclick="window.location.href = 'https://omerwexler86.github.io/pendo/README';">Click Here</button>
 
