--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
         // Call this whenever information about your visitors becomes available
         // Please use Strings, Numbers, or Bools for value types.
         pendo.initialize({
-            visitor: {
-                id:              '1243273',
+            visitor: 
+                id:              '4243273',
                 town:             "Rishon LeZion", 
 
                    // Required if user is logged in
-                 email:        'gaia@gaia.com',
-                firstName:         'Gaia',
+                 email:        'omer@pendo.io',
+                firstName:         'omer',
                 lastName:    'Wexler',
                 date: Date() 
                 // You can add any additional visitor level key-values here,
