--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
         // Please use Strings, Numbers, or Bools for value types.
         pendo.initialize({
             visitor: 
-                id:              '4243273',
+                id:              '1243276',
                 town:             "Rishon LeZion", 
 
                    // Required if user is logged in
                  email:        'omer@pendo.io',
-                firstName:         'omer',
+                firstName:         'Gaia',
                 lastName:    'Wexler',
                 date: Date() 
                 // You can add any additional visitor level key-values here,
