--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
                    // Required if user is logged in
                  email:        'omer@pendo.io',
-                firstName:         'Omer',
+                firstName:         'Omer2',
                 lastName:    'Wexler',
                 date: Date() 
                 // You can add any additional visitor level key-values here,
