--- a/README.html
+++ b/README.html
@@ -13,7 +13,7 @@
         // Please use Strings, Numbers, or Bools for value types.
         pendo.initialize({
             visitor: {
-                id:              'omer'   // Required if user is logged in
+                id:              'omer22'   // Required if user is logged in
                 // email:        // Optional
                 // role:         // Optional
 
