--- a/README.html
+++ b/README.html
@@ -13,10 +13,14 @@
         // Please use Strings, Numbers, or Bools for value types.
         pendo.initialize({
             visitor: {
-                id:              'omer22'   // Required if user is logged in
-                // email:        // Optional
-                // role:         // Optional
+                id:              '1243213',
+                town:             "Rishon LeZion", 
 
+                   // Required if user is logged in
+                 email:        'omer@pendo.io',
+                firstName:         'Omer2',
+                lastName:    'Wexler',
+                date: Date() 
                 // You can add any additional visitor level key-values here,
                 // as long as it's not one of the above reserved names.
             },
@@ -31,7 +35,9 @@
                 // You can add any additional account level key-values here,
                 // as long as it's not one of the above reserved names.
             }
-        });
+           
+});
+       
 })('5b78922f-21c6-4607-6a35-2dbe203c2c7b');
 </script>	</head>
 
