--- a/index.html
+++ b/index.html
@@ -63,6 +63,19 @@ function saab(selectObject){
 <button>Click me 3</button>
 <button>Click me 4</button>
 <button>Click me 5</button>
+<br><br><br><br>
+<h2>HTML Forms</h2>
+
+<form action="/action_page.php">
+  First name:<br>
+  <input type="text" name="firstname" value="Mickey">
+  <br>
+  Last name:<br>
+  <input type="text" name="lastname" value="Mouse">
+  <br><br>
+  <input type="submit" value="Submit">
+</form> 
+
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 <select onchange="saab(this)">
   <option id='o1' value="volvo">Volvo</option>
