--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 function sendEvent(){
   
-  pendo.track('btnClick', {omer:'omer'});
+  pendo.track("btnClick", {omer:'omer'});
 }
 </script>
 <!-- Start of Async Drift Code -->
