--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ drift.load('cn998c44h2tf');
 
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 <select onchange="saab(this)">
-  <option id='o1' value="volvo" onselect="showGuideById('pendo-g-VX7i8huNQC9pzWnI0NO9O0bYfh8')">Volvo</option>
+  <option id='o1' value="volvo" onselect="pendo.showGuideById('pendo-g-VX7i8huNQC9pzWnI0NO9O0bYfh8')">Volvo</option>
   <option id='o2' value="saab" onselect='pendo.track('Omer',null)'>Saab</option>
   <option id='o3' value="mercedes">Mercedes</option>
   <option id='o4' value="audi">Audi</option>
