--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ drift.load('cn998c44h2tf');
 <select onchange="saab(this)">
   <option id='o1' value="volvo">Volvo</option>
   <option id='o2' value="saab" onselect='pendo.track('Omer',null)'>Saab</option>
-  <option id='o3' value="mercedes" onselect="pendo.showGuideById('VX7i8huNQC9pzWnI0NO9O0bYfh8')">Mercedes</option>
+  <option id='o3' value="mercedes" onclick="pendo.showGuideById('VX7i8huNQC9pzWnI0NO9O0bYfh8')">Mercedes</option>
   <option id='o4' value="audi">Audi</option>
 </select>
   <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
