--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <script type="text/javascript">
 
 function showGuide(e){
-  pendo.showGuideById(e.target.value)
+  pendo.showGuideById(e.target.dataset.guideId)
 }
 </script>
 
