--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 <script type="text/javascript">
 
 function showGuide(e){
+  console.log('event:', e)
   pendo.showGuideById(e.target.dataset.guideId)
 }
 </script>
