--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
 <script type="text/javascript">
 
 function showGuide(e){
-  console.log('event:', e)
   pendo.showGuideById(e.target.value)
 }
-Ç
+
+
 </script>
 
 <script type="text/javascript">
@@ -113,10 +113,10 @@ drift.load('cn998c44h2tf');
 </form> 
 
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-<select onchange="showGuide(this)">
+<select onchange="showGuide">
   <option id='o1' value="lzZbrZ416zIV4w6ZKjJrOV6MmVY" >Volvo</option>
-  <option id='o2' value="saab" data-guide-id="lzZbrZ416zIV4w6ZKjJrOV6MmVY">Saab</option>
-  <option id='o3' value="mercedes" data-guide-id="VX7i8huNQC9pzWnI0NO9O0bYfh8">Mercedes</option>
+  <option id='o2' value="saab">Saab</option>
+  <option id='o3' value="mercedes">Mercedes</option>
   <option id='o4' value="audi" onselect="pendo.showGuideById('VX7i8huNQC9pzWnI0NO9O0bYfh8')">Audi</option>
 </select>
   <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
