--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ drift.load('cn998c44h2tf');
   <option id='o1' value="lzZbrZ416zIV4w6ZKjJrOV6MmVY" >Volvo</option>
   <option id='o2' value="saab">Saab</option>
   <option id='o3' value="mercedes">Mercedes</option>
-  <option id='o4' value="audi" onselect="pendo.showGuideById('VX7i8huNQC9pzWnI0NO9O0bYfh8')">Audi</option>
+  <option id='o4' value="audi" onclick="pendo.showGuideById('VX7i8huNQC9pzWnI0NO9O0bYfh8')">Audi</option>
 </select>
   <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
   <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
