--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ function showGuide(e){
   pendo.showGuideById(e.target.value)
 }
 
-
+document.getElementById('carSelect').addEventListener('change', showGuide)
 </script>
 
 <script type="text/javascript">
@@ -113,7 +113,7 @@ drift.load('cn998c44h2tf');
 </form> 
 
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-<select onchange="showGuide">
+<select id="carSelect">
   <option id='o1' value="lzZbrZ416zIV4w6ZKjJrOV6MmVY" >Volvo</option>
   <option id='o2' value="saab">Saab</option>
   <option id='o3' value="mercedes">Mercedes</option>
