--- a/index.html
+++ b/index.html
@@ -95,7 +95,8 @@ drift.load('cn998c44h2tf');
 </head>
 <body onload="domReady">
 <h1> Test site</h1>
-
+<iframe width="420" height="315" src="https://insightsquared-1.wistia.com/medias/wn7iojh4ak">
+</iframe>
 <h2>HTML Buttons</h2>
 <p>HTML buttons are defined with the button tag:</p>
 <button id='clickMe1'>Click me 1</button>
