--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
                 // You can add any additional account level key-values here,
                 // as long as it's not one of the above reserved names.
             }
+            parentAccount: {
+      id:           'PARENT-ACCOUNT-UNIQUE-ID'
+      // name:         // Optional
+      // You can add any additional master account level
+      // key-values here.
+    }
            
 });
        
