--- a/README.html
+++ b/README.html
@@ -13,7 +13,7 @@
         // Please use Strings, Numbers, or Bools for value types.
         pendo.initialize({
             visitor: {
-                id:              '1243213',
+                id:              '1243113',
                 town:             "Rishon LeZion", 
 
                    // Required if user is logged in
@@ -48,3 +48,4 @@
 <a href = 'https://omerwexler86.github.io/pendo/'>Click me 2</a>
 <button>Click me 2</button>
 <button>Click me 3</button>
+<button>Click me now</button>
