--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
                 // You can add any additional account level key-values here,
                 // as long as it's not one of the above reserved names.
             }
-
            
 });
        
@@ -106,7 +105,6 @@ drift.load('cn998c44h2tf');
 <button onclick="sendEvent()">Click me 3</button>
 <button>Click me 4</button>
 <button>Click me 5</button>
-<button>Click me now</button>
 <br><br><br><br>
 <h2>HTML Forms</h2>
 
@@ -137,5 +135,9 @@ drift.load('cn998c44h2tf');
   <button>Click me 6</button>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
   <p>Text</p>
-
+<style>
+#drift-widget{
+  display: none;
+}
+</style>
 </body>
