--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ drift.load('cn998c44h2tf');
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
   <p>Text</p>
 <style>
-#drift-widget{
+#drift-widget-container{
   display: none;
 }
 </style>
