--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ drift.load('cn998c44h2tf');
   <p>Text</p>
 <style>
 #drift-widget-container{
-  display: none;
+  display: none!important;
 }
 </style>
 </body>
