--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         // Please use Strings, Numbers, or Bools for value types.
         pendo.initialize({
             visitor: {
-                id:              'VISITOR-UNIQUE-ID',
+                id:              'omer1234',
                 town:             "Rishon LeZion", 
 
                    // Required if user is logged in
