--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ drift.load('cn998c44h2tf');
 <p>HTML buttons are defined with the button tag:</p>
 <button id='clickMe1'>Click me 1</button>
 <a href = 'https://omerwexler86.github.io/pendo/README'>Click me 2</a>
-<button class="your-button-class" onclick="window.location.href = 'https://omerwexler86.github.io/pendo/README';">Click Here</button>
+<button class="your-button-class" >Click Here</button>
 
 <button onclick="sendEvent()">Click me 3</button>
 <button>Click me 4</button>
