--- a/index.html
+++ b/index.html
@@ -131,8 +131,10 @@ drift.load('cn998c44h2tf');
   <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
   <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
   
+  <div>
   <p>This is a text for testing the scroll bar</p>
   <button>Click me 6</button>
+</div>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
   <p>Text</p>
 <style>
