--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ drift.load('cn998c44h2tf');
   <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
   <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
   
-  <div class="omer6">
+  <div id="omer6">
   <p>This is a text for testing the scroll bar</p>
   <button>Click me 6</button>
 </div>
