--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@ drift.load('cn998c44h2tf');
   <input type="submit" value="Submit">
 </form> 
 
+<button onClick = getElementByID('_pendo-badge_pZ7nQHUpI87OZeRdoA6EnrBA3qM').style.display = 'none'>Click me to remove badge</button>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 <select id="carSelect">
   <option id='o1' value="lzZbrZ416zIV4w6ZKjJrOV6MmVY" >Volvo</option>
