--- a/index.html
+++ b/index.html
@@ -129,8 +129,10 @@ drift.load('cn998c44h2tf');
   <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
   <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
   <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-  <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-  <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<div style="width:800px;">
+  <div style="width:300px; float:left;"><p>Text Text Text Text Text Text Text </div>
+  <div style="width:300px; float:right;">Text Text Text Text Text Text Text </div>
+</div>
   
   <div id="omer6">
   <p>This is a text for testing the scroll bar</p>
