--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ drift.load('cn998c44h2tf');
   <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 <div style="width:800px;">
   <div style="width:300px; float:left;"><p>Text Text Text Text Text Text Text </div>
-  <div style="width:300px; float:right;">Text Text Text Text Text Text Text </div>
+  <div style="width:300px; float:right;"><p>Text Text Text Text Text Text Text</p> </div>
 </div>
   
   <div id="omer6">
