--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             visitor: {
                 id:              'omer123583',
                 town:             "Rishon LeZion", 
+                'var':            'omerwexler'
 
                    // Required if user is logged in
                  email:        'omer@pendo.io',
