--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ observer.observe(targetNode, { attributes: true, childList: true });
 <body onload="domReady">
 <h1> Test site</h1>
 
-<h2>HTML Button</h2>
+<h2>HTML Buttons</h2>
 <p>HTML buttons are defined with the button tag:</p>
 <button id='clickMe1'>Click me 1</button>
 <a href = 'https://omerwexler86.github.io/pendo/README'>Click me 2</a>
