--- a/index.html
+++ b/index.html
@@ -116,7 +116,15 @@ observer.observe(targetNode, { attributes: true, childList: true });
 <button onclick="sendEvent()">Click me 3</button>
 <button>Click me 4</button>
 <button>Click me 5</button>
-<br><br><br><br>
+<br><br>
+
+<div style="visibility:none;">
+  <br><br>
+  <p>xxxxxxxxxxxxxx</p>
+  <br><br>
+</div>
+
+<br><br>
 
 <h2>HTML Forms</h2>
 
