--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ observer.observe(targetNode, { attributes: true, childList: true });
 <button>Click me 5</button>
 <br><br>
 
-<div style="visibility:none;">
+<div style="visibility: hidden;">
   <br><br>
   <p>xxxxxxxxxxxxxx</p>
   <br><br>
