--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
             visitor: {
                 id:              '12431134',
                 town:             "Rishon LeZion", 
+                company_uuid: "fc35e2a2-c128-4223-a95e-6a99707a4732", 
+
 
 
                    // Required if user is logged in
