--- a/index.html
+++ b/index.html
@@ -147,6 +147,22 @@ observer.observe(targetNode, { attributes: true, childList: true });
 <input type="radio" name="gender" value="female"> Female<br>
 <input type="radio" name="gender" value="other"> Other
 
+<script type="text/javascript">
+document.addEventListener('click', function(event) {
+  debugger
+    // // var guideElement = document.querySelector('#pendo-g-URMBri2auccUKluSTZNl5-ojvl4');
+    // // var isInsideGuide = guideElement.contains(event.target);
+    // // if (isInsideGuide) {
+    // //     return;
+    // // }
+    // pendo.onGuideDismissed();
+
+});
+
+
+
+</script>
+
 <br><br><br><br><br><br><br><br>
 
 <select id="carSelect">
