--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 id:              '124334338',
                 town:             "Rishon LeZion", 
                 company_uuid: "fc35e2a2-c128-4223-a95e-6a99707a4732", 
-                test: "omerTest"
+                test: "omerTest",
 
 
 
