--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
                 // You can add any additional account level key-values here,
                 // as long as it's not one of the above reserved names.
             }
+             parentAccount: {
+                id:           'P23323'
+                // name:         // Optional
+                // You can add any additional master account level
+                // key-values here.
+              }
            
 });
        
