--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             },
 
             account: {
-                id:           'ACCOUNT-UNIQUE-ID' // Highly recommended
+                id:           'a12332' // Highly recommended
                 // name:         // Optional
                 // planLevel:    // Optional
                 // planPrice:    // Optional
