--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
             account: {
                 id:           'a12332' // Highly recommended
-                // name:         // Optional
+                name:         'account1'
                 // planLevel:    // Optional
                 // planPrice:    // Optional
                 // creationDate: // Optional
@@ -41,7 +41,7 @@
             },
              parentAccount: {
                 id:           'P23323'
-                // name:         // Optional
+                name:         'parent1'
                 // You can add any additional master account level
                 // key-values here.
               }
