--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             },
 
             account: {
-                id:           'a12332' // Highly recommended
+                id:           'a12332', // Highly recommended
                 name:         'account1'
                 // planLevel:    // Optional
                 // planPrice:    // Optional
@@ -40,7 +40,7 @@
                 // as long as it's not one of the above reserved names.
             },
              parentAccount: {
-                id:           'P23323'
+                id:           'P23323',
                 name:         'parent1'
                 // You can add any additional master account level
                 // key-values here.
