--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 company_uuid: "fc35e2a2-c128-4223-a95e-6a99707a4732", 
                 test: "omerTest",
 
+                pageURL: window.location.href,
 
 
                    // Required if user is logged in
