--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
 
             account: {
                 id:           'a12332', // Highly recommended
-                name:         'account1'
+                name:         'account1',
+                countryCode: "Test 1",
                 // planLevel:    // Optional
                 // planPrice:    // Optional
                 // creationDate: // Optional
