--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
         // Please use Strings, Numbers, or Bools for value types.
         pendo.initialize({
             visitor: {
-                id:              'omer@pendo.io',
+                id:              '33221',
                 town:             "Rishon LeZion", 
                 company_uuid: "fc35e2a2-c128-4223-a95e-6a99707a4732", 
                 test: "omerTest",
+                firstName: "Omer",
+                lastName: "Wexler",
 
                 pageURL: window.location.href,
 
