--- a/index.html
+++ b/index.html
@@ -141,7 +141,9 @@ observer.observe(targetNode, { attributes: true, childList: true });
   <span class="slider round"></span>
 </label>
 
-<br><br>
+<br>
+<a href="https://www.computerhope.com/" target="_blank" rel="noreferrer">Computer Hope</a>
+<br>
 
 <h2>HTML Forms</h2>
 
