--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ observer.observe(targetNode, { attributes: true, childList: true });
 </label>
 
 <br>
-<a href="https://www.computerhope.com/" target="_blank" rel="noreferrer">Computer Hope</a>
+<a onclick="window.open('https://www.w3docs.com/')" class="link" >Computer Hope</a>
 <br>
 
 <h2>HTML Forms</h2>
