--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ observer.observe(targetNode, { attributes: true, childList: true });
 <p>HTML buttons are defined with the button tag:</p>
 <button id='clickMe1'>Click me 1</button>
 <a href = 'https://omerwexler86.github.io/pendo/README'>Click me 2</a>
-<button class="your-button-class" >Click Here</button>
+<!--<button class="your-button-class" >Click Here</button>-->
 
 <button onclick="sendEvent()">Click me 3</button>
 <button>Click me 4</button>
