--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 test: "omerTest",
                 firstName: "Omer",
                 lastName: "Wexler",
+                screenSize: window.screen.width,
 
                 pageURL: window.location.href,
 
