--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <head>
+  
   <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -198,6 +199,13 @@ document._p
 
 
 <br><br>
+<h2>Search Button</h2>
+
+<p>Full width:</p>
+<form class="example" action="/action_page.php">
+  <input type="text" placeholder="Search.." name="search">
+  <button type="submit"><i class="fa fa-search"></i></button>
+</form>
 
 <style>
 /* Popup container - can be anything you want */
